Base layout created
Dropdown menu, logo holder , drink acon6tainer created

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,23 +4,35 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="stylesheet.css">
         <title>Home Page</title> 
-    </head>`
-        <body>
-        <section class="p-menu1">
-        <nav id="navbar" class="navigation" role="navigation">
-            <input id="toggle1" type="checkbox" />
-            <label class="hamburger1" for="toggle1">
-            <div class="top"></div>
-            <div class="meat"></div>
-            <div class="bottom"></div>
-            </label>
-        
-            <nav class="menu1">
-            <a class="link1" href="">Name</a>
-            <a class="link1" href="">Past orders</a>
-            <a class="link1 button-nav" href="">Admin</a>
+    </head>
+    <body>
+    <div class="grid-container">
+        <div class="header">
+            <img alt="Waving gif." src="Page_element.gif" class="">
+            <section class="p-menu1">
+            <nav id="navbar" class="navigation" role="navigation">
+                <input id="toggle1" type="checkbox" />
+                <label class="hamburger1" for="toggle1">
+                <div class="top"></div>
+                <div class="meat"></div>
+                <div class="bottom"></div>
+                </label>
+                <nav class="menu1">
+                <a class="link1" href="">Name</a>
+                <a class="link1" href="">Past orders</a>
+                <a class="link1 button-nav" href="">Admin</a>
+                </nav>
             </nav>
-        </nav>
-        </section>
+            </section>
+            <hr>
+        </div>
+        <div class="menu">
+            <div class="drink">
+                <img src="nulled_img.png" alt="nulled_img.svg" class="drinkIMG">
+                <h2>Holding name</h2>
+                <p>Holding discription</p>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
